test/associative/diten/array-as-map-add-index.good
array-as-map-add-index.chpl:4: error: halt reached - array index out of bounds: hello
