test/associative/diten/array-as-map-add-index.chpl
var D: domain(string);
var A: [D] int;

A["hello"] = 1;
